discussion/kv_engine/183329/183329_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add QuotaSharingItemPager

Added a new subclass of ItemPager which evicts items from a set of
buckets and stops eviction when sum(mem_used) < sum(low_wat).

Changed the ItemPager factory method to return an instance of the
QuotaSharingItemPager which is shared between quota sharing
configurations.

The QuotaSharingItemPager's schedulePagingVisitors implementation uses
the CrossBucketVisitorAdapter to schedule paging visitors for all
buckets sharing HT quotas.

The adapter round-robins which bucket's paging visitor gets to run.
This is done to avoid evicting more items from buckets which have more
items resident below the MFU eviction threshold (HTs more densely
populated with such items, which would be faster to evict from if we
were just running the visitors concurrently without syncronisation).

Change-Id: I5c285db14e438cf159cde181de91b838549b706a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-12-09 06:53:57.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-09 08:42:38.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22130/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:248:46: error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
    std::size_t estimatedTotalMemUsed = std::accumulate(
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.h:48:39: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual std::chrono::microseconds maxExpectedDuration() const override;
    ~~~~~~~~                          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.h:54:28: warning: "virtual" is redundant since the function is already declared "override" [modernize-use-override]
    virtual EvictionRatios getEvictionRatios(
    ~~~~~~~~               ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22130/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:248:46:
error: no member named "accumulate" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22130/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51427/ : FAILURE

Failure of GoogleTest "MeteringTest/MeteringTest.SubdocArrayAddUniqueENotArray/Metered":

<pre>
[ RUN      ] MeteringTest/MeteringTest.SubdocArrayAddUniqueENotArray/Metered
[warn] event_base_new_with_config: Unable to make base notifiable.
[warn] event_base_free_: no base to free
unknown file: error: C++ exception with description "Failed to create pipe for AtomicNotificationQueue9: bad file descriptor" thrown in SetUp().
[  FAILED  ] MeteringTest/MeteringTest.SubdocArrayAddUniqueENotArray/Metered, where GetParam() = 4-byte object <00-00 00-00> (6 ms)
MeteringTest/MeteringTest.SubdocArrayAddUniqueENotArray/Metered
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51427/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43172/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:248:46:
error: no member named "accumulate" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43172/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11846/ : FAILURE

Compile error at [2022-12-09T08:01:48.415Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/quota_sharing_item_pager.cc:248:46:
error: no member named "accumulate" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11846/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/884/ : FAILURE

Failure of GoogleTest "TwoBucketQSPagingTest.ItemsAreFairlyEvictedFromTwoBuckets":

<pre>
[ RUN      ] TwoBucketQSPagingTest.ItemsAreFairlyEvictedFromTwoBuckets
[2022-12-09T07:31:20.690Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp_cluster/quota_sharing_paging_test.cc:333: Failure
[2022-12-09T07:31:20.690Z] Expected: (std::abs(getMemStats(1).current - 7.5_MiB)) < (1_MiB), actual: 1552112 vs 1048576
[2022-12-09T07:31:20.690Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/tests/testapp_cluster/quota_sharing_paging_test.cc:335: Failure
[2022-12-09T07:31:20.690Z] Expected: (std::abs(getMemStats(0).current - getMemStats(1).current)) < (2_MiB), actual: 2459504 vs 2097152
[2022-12-09T07:31:20.690Z] bucket0: {current: 8.3653564453125 MiB, lower: 5 MiB, upper: 14 MiB}, bucket1: {current: 6.0197906494140625 MiB, lower: 10 MiB, upper: 14 MiB}
[2022-12-09T07:31:20.690Z] [  FAILED  ] TwoBucketQSPagingTest.ItemsAreFairlyEvictedFromTwoBuckets (2362 ms)
TwoBucketQSPagingTest.ItemsAreFairlyEvictedFromTwoBuckets
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/884/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21695/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24582/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24168/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25442/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23671/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32588/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11936/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
